--- a/src/style.css
+++ b/src/style.css
@@ -21,12 +21,23 @@ header {
 }
 
 form {
-  padding: 30px;
-  background-color: white;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
   display: flex;
+  margin-top: 20px;
+}
+.hint {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 5px;
+  margin-left: 10px;
+  opacity: 0.6;
+}
+.form-container {
+  background-color: white;
   margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
+  color: #5c5c60;
 }
 .instructions {
   padding: 16px;
@@ -54,14 +65,30 @@ form {
 .poem {
   font-size: 16px;
   background-color: white;
-  padding: 20px;
+  padding: 15px;
   line-height: 2;
   border-left: 3px solid #3c0266;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
   border-radius: 10px;
 }
+.hidden {
+  display: none;
+}
 footer {
   text-align: center;
   font-size: 13px;
   margin-top: 30px;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
 }
